; ModuleID = '/home/carl/AnghaBench/systemd/src/nss-mymachines/extr_nss-mymachines.c_avoid_deadlock.c'
source_filename = "/home/carl/AnghaBench/systemd/src/nss-mymachines/extr_nss-mymachines.c_avoid_deadlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [24 x i8] c"SYSTEMD_ACTIVATION_UNIT\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"systemd-machined.service\00", align 1
@.str.2 = private unnamed_addr constant [25 x i8] c"SYSTEMD_ACTIVATION_SCOPE\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"system\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @avoid_deadlock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @avoid_deadlock() #0 {
  %1 = alloca i32, align 4
  %2 = call i64 (...) @geteuid()
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %16

5:                                                ; preds = %0
  %6 = call i32 @getenv(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %7 = call i64 @streq_ptr(i32 %6, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %5
  %10 = call i32 @getenv(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0))
  %11 = call i64 @streq_ptr(i32 %10, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0))
  %12 = icmp ne i64 %11, 0
  br label %13

13:                                               ; preds = %9, %5
  %14 = phi i1 [ false, %5 ], [ %12, %9 ]
  %15 = zext i1 %14 to i32
  store i32 %15, i32* %1, align 4
  br label %16

16:                                               ; preds = %13, %4
  %17 = load i32, i32* %1, align 4
  ret i32 %17
}

declare dso_local i64 @geteuid(...) #1

declare dso_local i64 @streq_ptr(i32, i8*) #1

declare dso_local i32 @getenv(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
